--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,17 @@
 * {margin: 0; padding: 0;}
+body {
+  font-size:11px; font-family:"arial";
+/*  	min-width:500px;
+	min-height:510px;*/
+  	overflow-x:hidden;
+	overflow-y:hidden;
+}
+
 .header {
   width:100%;
 }
 
-.header {
+.header h1{
 /*border-bottom: 1px 
   margin-bottom: 5px; width: 100%;
   background-image: -webkit-linear-gradient(bottom, rgb(35,0,191) 44%, rgb(4,14,129) 72%, rgb(171,36,36) 0%);
@@ -32,16 +40,18 @@
 }
 
 .header img {
-  float:left;
-  margin-top:14px;
+    display:inline-block;
+	margin: 5px;
 }
-
-body {
-  font-size:11px; font-family:"arial";
-/*  	min-width:500px;
-	min-height:510px;*/
-  	overflow-x:hidden;
-	overflow-y:hidden;
+#wrapper {
+	width: 834px;
+/*        height: 410px;*/
+	min-width: 95%;
+}
+#content {
+float: left;
+width: 525px;
+	overflow-x: hidden;
 }
 
 div.entry-div {
@@ -59,9 +69,9 @@ div.entry-div {
 a {
 	color: #000000;
 }
-a:visited { color:#ccc; }
+/*a:visited { color:#ccc; }*/
 .author { color:#333; font-size:10px; }
-div.tabs {width:100%; margin-left:20px; height:40px; margin-top: 10px; clear:both;}
+div.tabs {width:100%; margin-left:10px; height:40px; margin-top: 10px; clear:both;}
 
 div.tabs ul { margin:0; padding:0; list-style-type:none;}
 div.tabs ul li {
@@ -70,7 +80,7 @@ div.tabs ul li {
   height: px;*/
   text-align: center;
   padding: 5px 5px;
-  margin: 2px 3px 5px;
+  margin: 2px 2px 5px;
   background-color: whiteSmoke;
   background-repeat: repeat-x;
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, whiteSmoke));
@@ -82,6 +92,43 @@ div.tabs ul li {
   -webkit-box-shadow: inset 0 1px 0 #ffffff;
   box-shadow: inset 0 1px 0 #ffffff;
   cursor:pointer;
+}
+
+div.stabs {
+	width: 100%;
+	margin-left: 10px; /*height:10px;
+	margin-top: 2px; */
+	clear: both;
+}
+
+div.stabs select {
+	font-size: 9px;
+}
+
+div.stabs ul {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	font-size: 9px;
+}
+div.stabs ul li {
+  float: left;
+  /*width: 114px;
+  height: px;
+  text-align: center;
+  padding: 5px 5px;*/
+  margin: 2px 3px 5px;
+/*    background-color: whiteSmoke;
+  background-repeat: repeat-x;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, whiteSmoke));
+  background-image: -webkit-linear-gradient(top, white, whiteSmoke);
+  background-image: linear-gradient(top, white, whiteSmoke);
+border: 1px solid #000;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: inset 0 1px 0 #ffffff;
+  box-shadow: inset 0 1px 0 #ffffff;
+  cursor:pointer;*/
 }
 
 .selected {
@@ -100,6 +147,9 @@ div.tabs ul li {
 
 .clearfix { clear:both; }
 
+#resultsscore {
+	overflow-x: hidden;
+}
 #score-div
 {
 /*    width    : 510px;
@@ -140,6 +190,54 @@ bottom: -300px;*/
 }
 #livescore-div {
 	width:525px; margin-left:10px; clear:both;
+}
+#instafeed a {
+  padding:5px 5px 1px 5px;
+  margin:3px;
+  border:1px solid #e1e1e1;
+  display:inline-block;
+  border-radius: 4px;
+  position:relative;
+}
+
+#instafeed .insta {
+  display: inline-block;
+}
+
+#instafeed .likes {
+  background:rgba(222,89,135,0.8);
+  font-family:sans-serif;
+  font-size:1em;
+  position:absolute;
+  color:#ffffff;
+  right:5px;
+  top:5px;
+  left:5px;
+  opacity:0;
+  text-align:center;
+  line-height:150px;
+  text-shadow:0 1px rgba(0,0,0,0.5);
+  -webkit-font-smoothing:antialiased;
+  -webkit-transition: opacity 100ms ease;
+	-moz-transition: opacity 100ms ease;
+	-o-transition: opacity 100ms ease;
+	-ms-transition: opacity 100ms ease;
+	transition: opacity 100ms ease;
+}
+
+#instafeed a:hover .likes {
+  opacity:1;
+}
+.sense_cont {
+float: right;
+width: 234px;
+}
+.sense {
+height: 80px;
+width: 234px;;
+}
+#twitter-widget-0 {
+min-width: 500px;
 }
 /* Options */
 body.options { margin: 10px; }
